codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_header_renders_startup_logo.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
  o----.
     .-'  siyuan
  .-'
  '----o
